<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.cowjumping</groupId>
    <artifactId>VisualFitsBrowser</artifactId>
    <version>1.10.0</version>

    <packaging>jar</packaging>

    <name>VisualFitsBrowser</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>

        <resources>
            <resource>
                <directory>src/main/java/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>

                        <id>create-my-bundle</id>

                        <phase>package</phase>

                        <goals>
                            <goal>single</goal>
                        </goals>

                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <archive>
                                <manifest>
                                    <mainClass>org.cowjumping.VisualFitsBrowser.VisualFitsBrowserApp</mainClass>
                                </manifest>
                            </archive>
                        </configuration>
                    </execution>
                </executions>
            </plugin>


            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <configuration>
                    <mainClass>org.cowjumping.VisualFitsBrowser.VisualFitsBrowserApp</mainClass>
                    <arguments>
                        <argument/>
                    </arguments>
                </configuration>
            </plugin>

        </plugins>

    </build>


    <!-- Custom repository declaration for non-maven libraries. See, e.g., http://stackoverflow.com/questions/4955635/how-to-add-local-jar-files-in-maven-project -->

    <repositories>
        <repository>
            <id>local-maven-repo</id>
            <url>file:///${project.basedir}/lib</url>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.41.2.2</version>
        </dependency>


        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.17.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.1</version>
        </dependency>


        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jfreechart</artifactId>
            <version>1.5.3</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>

        <dependency>
            <groupId>gov.nasa.gsfc.heasarc</groupId>
            <artifactId>nom-tam-fits</artifactId>
            <version>1.17.0</version>
        </dependency>

        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.5.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <dependency>
            <groupId>uk.ac.starlink</groupId>
            <artifactId>jsamp</artifactId>
            <version>1.3.9</version>
        </dependency>

        <!-- Note: Below are dependencies that are managed in a local repository,
            since those libraries are not available via maven central. -->

       <!-- <dependency>
            <groupId>jsamp</groupId>
            <artifactId>jsamp</artifactId>
            <version>1.3.9</version>
        </dependency>
        -->
        <dependency>
            <groupId>jsky-util-gui</groupId>
            <artifactId>jsky-util-gui</artifactId>
            <version>3.0</version>
        </dependency>

        <dependency>
            <groupId>jsky-coords</groupId>
            <artifactId>jsky-coords</artifactId>
            <version>3.0</version>
        </dependency>

        <dependency>
            <groupId>jsky-util</groupId>
            <artifactId>jsky-util</artifactId>
            <version>3.0</version>
        </dependency>

    </dependencies>


    <issueManagement>
        <url>https://github.com/drhaz/VisualFitsBrowser/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>


    <scm>
        <connection>scm:git:https://github.com/drhaz/VisualFitsBrowser</connection>
    </scm>

</project>
